crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__empty-type-checking-block_TCH005.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- - kind:
      name: EmptyTypeCheckingBlock
      body: Found empty type-checking block
      suggestion: Delete empty type-checking block
      fixable: true
    location:
      row: 4
      column: 4
    end_location:
      row: 4
      column: 8
    fix:
      content: ""
      location:
        row: 3
        column: 0
      end_location:
        row: 5
        column: 0
    parent: ~
  - kind:
      name: EmptyTypeCheckingBlock
      body: Found empty type-checking block
      suggestion: Delete empty type-checking block
      fixable: true
    location:
      row: 8
      column: 4
    end_location:
      row: 8
      column: 8
    fix:
      content: ""
      location:
        row: 7
        column: 0
      end_location:
        row: 9
        column: 0
    parent: ~
  - kind:
      name: EmptyTypeCheckingBlock
      body: Found empty type-checking block
      suggestion: Delete empty type-checking block
      fixable: true
    location:
      row: 11
      column: 4
    end_location:
      row: 11
      column: 8
    fix:
      content: ""
      location:
        row: 10
        column: 0
      end_location:
        row: 12
        column: 0
    parent: ~
  - kind:
      name: EmptyTypeCheckingBlock
      body: Found empty type-checking block
      suggestion: Delete empty type-checking block
      fixable: true
    location:
      row: 16
      column: 8
    end_location:
      row: 16
      column: 12
    fix:
      content: ""
      location:
        row: 15
        column: 0
      end_location:
        row: 17
        column: 0
    parent: ~
  - kind:
      name: EmptyTypeCheckingBlock
      body: Found empty type-checking block
      suggestion: Delete empty type-checking block
      fixable: true
    location:
      row: 22
      column: 8
    end_location:
      row: 22
      column: 12
    fix:
      content: ""
      location:
        row: 21
        column: 0
      end_location:
        row: 23
        column: 0
    parent: ~

