crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__exempt_modules.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- - kind:
      name: TypingOnlyThirdPartyImport
      body: "Move third-party import `flask` into a type-checking block"
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 11
    end_location:
      row: 14
      column: 16
    fix: ~
    parent: ~

