crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__import_from.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
<filename>:5:5: TCH002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
  |
5 | from pandas import (
6 |     DataFrame,  # DataFrame
  |     ^^^^^^^^^ TCH002
7 |     Series,  # Series
8 | )
  |
  = help: Move into type-checking block

ℹ Suggested fix
2  2  | from __future__ import annotations
3  3  | 
4  4  | from pandas import (
5     |-    DataFrame,  # DataFrame
6  5  |     Series,  # Series
7  6  | )
   7  |+from typing import TYPE_CHECKING
   8  |+
   9  |+if TYPE_CHECKING:
   10 |+    from pandas import (
   11 |+        DataFrame,  # DataFrame
   12 |+        )
8  13 | 
9  14 | def f(x: DataFrame):
10 15 |     pass


