crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__import_from_type_checking_block.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
<filename>:7:5: TCH002 [*] Move third-party import `pandas.DataFrame` into a type-checking block
   |
 7 | from pandas import (
 8 |     DataFrame,  # DataFrame
   |     ^^^^^^^^^ TCH002
 9 |     Series,  # Series
10 | )
   |
   = help: Move into type-checking block

ℹ Suggested fix
4  4  | from typing import TYPE_CHECKING
5  5  | 
6  6  | from pandas import (
7     |-    DataFrame,  # DataFrame
8  7  |     Series,  # Series
9  8  | )
10 9  | 
11 10 | if TYPE_CHECKING:
   11 |+    from pandas import (
   12 |+        DataFrame,  # DataFrame
   13 |+        )
12 14 |     import os
13 15 | 
14 16 | def f(x: DataFrame):


