crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__multiple_modules_same_type.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
<filename>:6:8: TCH003 [*] Move standard library import `os` into a type-checking block
   |
 6 | from typing import TYPE_CHECKING
 7 | 
 8 | import os, sys
   |        ^^ TCH003
 9 | 
10 | def f(x: os, y: sys):
   |
   = help: Move into type-checking block

ℹ Suggested fix
3  3  | 
4  4  | from typing import TYPE_CHECKING
5  5  | 
6     |-import os, sys
7  6  | 
   7  |+if TYPE_CHECKING:
   8  |+    import os, sys
   9  |+
8  10 | def f(x: os, y: sys):
9  11 |     pass

<filename>:6:12: TCH003 [*] Move standard library import `sys` into a type-checking block
   |
 6 | from typing import TYPE_CHECKING
 7 | 
 8 | import os, sys
   |            ^^^ TCH003
 9 | 
10 | def f(x: os, y: sys):
   |
   = help: Move into type-checking block

ℹ Suggested fix
3  3  | 
4  4  | from typing import TYPE_CHECKING
5  5  | 
6     |-import os, sys
7  6  | 
   7  |+if TYPE_CHECKING:
   8  |+    import os, sys
   9  |+
8  10 | def f(x: os, y: sys):
9  11 |     pass


