crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__no_typing_import.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
---
<filename>:4:8: TCH002 [*] Move third-party import `pandas` into a type-checking block
  |
2 | from __future__ import annotations
3 | 
4 | import pandas as pd
  |        ^^^^^^^^^^^^ TCH002
5 | 
6 | def f(x: pd.DataFrame):
  |
  = help: Move into type-checking block

ℹ Suggested fix
1 1 | 
2 2 | from __future__ import annotations
3 3 | 
4   |-import pandas as pd
  4 |+from typing import TYPE_CHECKING
  5 |+
  6 |+if TYPE_CHECKING:
  7 |+    import pandas as pd
5 8 | 
6 9 | def f(x: pd.DataFrame):
7 10 |     pass


