crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TCH004_11.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- - kind:
      name: RuntimeImportInTypeCheckingBlock
      body: "Move import `typing.List` out of type-checking block. Import is used for more than type hinting."
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 23
    end_location:
      row: 4
      column: 27
    fix: ~
    parent: ~

