crates/ruff/src/rules/flake8_type_checking/snapshots/ruff__rules__flake8_type_checking__tests__runtime-import-in-type-checking-block_TCH004_12.py.snap
---
source: crates/ruff/src/rules/flake8_type_checking/mod.rs
expression: diagnostics
---
- - kind:
      name: RuntimeImportInTypeCheckingBlock
      body: "Move import `collections.abc.Callable` out of type-checking block. Import is used for more than type hinting."
      suggestion: ~
      fixable: false
    location:
      row: 6
      column: 32
    end_location:
      row: 6
      column: 40
    fix: ~
    parent: ~

